@@ -1,3 +1,12 @@
+2002-02-24 01:30
+ CONCEPT:
+  - Removed unneeded old file
+ Connection:
+  - Full method coverage by self-test
+ Cursor:
+  - Documented method coverage
+ Trigger:
+  - Full method coverage by self-test
 2002-02-15 01:30
  Docs:
   - More explanation on transaction bracketing
